--- a/.github/workflows/pull-request.yml
+++ b/.github/workflows/pull-request.yml
@@ -14,6 +14,7 @@ jobs:
         with:
           cache: pip
       - run: pip install bump-my-version
+      - run: git fetch origin master:refs/remotes/origin/master
       - run: curl -fsSL https://raw.githubusercontent.com/dycw/remote-scripts/refs/heads/master/scripts/check-version-bumped | sh -s
 
   shellcheck:
